--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
   "dependencies": {
     "@benchristel/yavanna": "^0.1.0",
     "express": "^4.13.4",
-    "jquery": "^3.0.0"
+    "jquery": "^3.0.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "webpack": "^1.13.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "browserify": "^13.0.1",
     "eslint-config-standard": "^5.3.1",
+    "eslint-config-standard-jsx": "^1.2.1",
+    "eslint-config-standard-react": "^2.5.0",
     "eslint-plugin-promise": "^1.3.2",
+    "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
@@ -26,6 +33,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.6",
     "gulp-webpack": "^1.5.0",
+    "react-addons-test-utils": "^15.1.0",
     "run-sequence": "^1.2.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-named": "^1.1.0",
