--- a/package.json
+++ b/package.json
@@ -16,31 +16,37 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "browserify": "^13.0.1",
+    "del": "^2.2.1",
     "eslint-config-standard": "^5.3.1",
     "eslint-config-standard-jsx": "^1.2.1",
     "eslint-config-standard-react": "^2.5.0",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2",
+    "glob": "^7.0.5",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
     "gulp-eslint": "^2.0.0",
+    "gulp-file": "^0.3.0",
     "gulp-iife": "^0.3.0",
     "gulp-jasmine": "^2.4.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-sane-watch": "^1.1.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.6",
     "gulp-webpack": "^1.5.0",
+    "jsdom": "^9.4.1",
     "react-addons-test-utils": "^15.1.0",
     "run-sequence": "^1.2.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-named": "^1.1.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp check"
   },
   "author": "Ben Christel",
   "license": "MIT"
