--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
   "main": "index.js",
   "dependencies": {
     "@benchristel/yavanna": "^0.1.0",
+    "body-parser": "^1.15.2",
+    "bookshelf": "^0.10.0",
+    "browser-request": "^0.3.3",
     "express": "^4.13.4",
     "jquery": "^3.0.0",
+    "knex": "^0.11.7",
+    "material-ui": "^0.15.1",
+    "materialize-css": "^0.97.6",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "webpack": "^1.13.1"
+    "react-router": "^2.5.2",
+    "react-tap-event-plugin": "^1.0.0",
+    "webpack": "^1.13.1",
+    "xmlhttprequest": "^1.7.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
