--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "@benchristel/yavanna": "^0.1.0",
     "babel-plugin-transform-regenerator": "^6.9.0",
     "babel-polyfill": "^6.9.1",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.0",
     "browser-request": "^0.3.3",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
     "express": "^4.13.4",
+    "gulp-eslint": "^3.0.1",
     "jquery": "^3.0.0",
     "knex": "^0.11.7",
     "material-ui": "^0.15.2",
@@ -22,6 +29,7 @@
     "react-router": "^2.5.2",
     "react-tap-event-plugin": "^1.0.0",
     "regenerator-runtime": "^0.9.5",
+    "secure-random-string": "^1.0.0",
     "webpack": "^1.13.1",
     "xmlhttprequest": "^1.7.0"
   },
@@ -30,18 +38,11 @@
     "babel-preset-react": "^6.11.1",
     "browserify": "^13.0.1",
     "del": "^2.2.1",
-    "eslint-config-standard": "^5.3.1",
-    "eslint-config-standard-jsx": "^1.2.1",
-    "eslint-config-standard-react": "^2.5.0",
-    "eslint-plugin-promise": "^1.3.2",
-    "eslint-plugin-react": "^5.2.2",
-    "eslint-plugin-standard": "^1.3.2",
     "glob": "^7.0.5",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
-    "gulp-eslint": "^2.0.0",
     "gulp-file": "^0.3.0",
     "gulp-iife": "^0.3.0",
     "gulp-jasmine": "^2.4.0",
