--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^2.2.1",
     "react": "^15.2.1",
     "react-dom": "^15.1.0",
+    "react-fontawesome": "^1.1.0",
     "react-router": "^2.5.2",
     "react-tap-event-plugin": "^1.0.0",
     "regenerator-runtime": "^0.9.5",
