--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "gulp-eslint": "^3.0.1",
     "jquery": "^3.0.0",
     "knex": "^0.11.7",
+    "markdown-react-js": "^0.3.0",
     "material-ui": "^0.15.2",
     "materialize-css": "^0.97.6",
     "mongodb": "^2.2.1",
     "react": "^15.2.1",
     "react-dom": "^15.1.0",
     "react-fontawesome": "^1.1.0",
+    "react-markdown": "^2.4.2",
+    "react-marked": "^0.3.1",
+    "react-remarkable": "^1.1.1",
     "react-router": "^2.5.2",
     "react-tap-event-plugin": "^1.0.0",
     "regenerator-runtime": "^0.9.5",
