--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bookshelf": "^0.10.0",
     "browser-request": "^0.3.3",
     "cookie-parser": "^1.4.3",
+    "crypto": "0.0.3",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-import": "^1.12.0",
