Tab memory and UI fixes
#13

--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "material-ui": "^0.15.2",
     "materialize-css": "^0.97.6",
     "mongodb": "^2.2.1",
-    "react": "^15.2.1",
-    "react-dom": "^15.1.0",
+    "normalize.css": "^4.2.0",
+    "react": "^15.3.0",
+    "react-addons-css-transition-group": "^15.3.0",
+    "react-addons-update": "^15.3.0",
+    "react-dom": "^15.2.0",
     "react-fontawesome": "^1.1.0",
     "react-markdown": "^2.4.2",
     "react-marked": "^0.3.1",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.5.2",
     "react-tap-event-plugin": "^1.0.0",
+    "react-toolbox": "^1.1.2",
     "regenerator-runtime": "^0.9.5",
     "secure-random-string": "^1.0.0",
     "webpack": "^1.13.1",
