--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "xmlhttprequest": "^1.7.0"
   },
   "devDependencies": {
+    "async-await-jasmine": "0.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "browserify": "^13.0.1",
