--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
     "express": "^4.13.4",
+    "geolib": "^2.0.21",
     "gulp-eslint": "^3.0.1",
     "jquery": "^3.0.0",
     "knex": "^0.11.7",
