Add grunt and tasks required by uglify

--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "express": "^4.13.4",
     "geolib": "^2.0.21",
     "glob": "^7.0.5",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
