frontend working. TODO: backend
#13

--- a/package.json
+++ b/package.json
@@ -53,14 +53,16 @@
     "materialize-css": "^0.97.6",
     "mongodb": "^2.2.1",
     "normalize.css": "^4.2.0",
-    "react": "^15.3.0",
+    "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.0",
     "react-addons-test-utils": "^15.1.0",
     "react-addons-update": "^15.3.0",
     "react-dom": "^15.2.0",
     "react-fontawesome": "^1.1.0",
+    "react-gcaptcha": "^3.2.0",
     "react-markdown": "^2.4.2",
     "react-marked": "^0.3.1",
+    "react-recaptcha": "^2.2.0",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.5.2",
     "react-tap-event-plugin": "^1.0.0",
