--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.0",
+    "browser-cookies": "^1.0.8",
     "browser-request": "^0.3.3",
     "browserify": "^13.0.1",
     "cookie-parser": "^1.4.3",
@@ -44,7 +45,6 @@
     "gulp-sane-watch": "^1.1.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.6",
-    "gulp-webpack": "^1.5.0",
     "jquery": "^3.0.0",
     "jsdom": "^9.4.1",
     "knex": "^0.11.7",
@@ -76,6 +76,7 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
     "webpack": "^1.13.1",
+    "webpack-stream": "^3.2.0",
     "xmlhttprequest": "^1.7.0"
   },
   "scripts": {
