--- a/package.json
+++ b/package.json
@@ -6,44 +6,15 @@
   "main": "index.js",
   "dependencies": {
     "@benchristel/yavanna": "^0.4.0",
-    "async-await-jasmine": "0.0.2",
-    "babel-plugin-transform-regenerator": "^6.9.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.0",
     "browser-cookies": "^1.0.8",
     "browser-request": "^0.3.3",
-    "browserify": "^13.0.1",
     "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
-    "del": "^2.2.1",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^6.0.0",
     "express": "^4.13.4",
     "geolib": "^2.0.21",
-    "glob": "^7.0.5",
-    "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-debug": "^2.1.2",
-    "gulp-eslint": "^3.0.1",
-    "gulp-file": "^0.3.0",
-    "gulp-iife": "^0.3.0",
-    "gulp-jasmine": "^2.4.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sane-watch": "^1.1.3",
-    "gulp-sourcemaps": "^1.6.0",
     "jquery": "^3.0.0",
     "jsdom": "^9.4.1",
     "knex": "^0.11.7",
@@ -67,17 +38,9 @@
     "react-tap-event-plugin": "^1.0.0",
     "react-toolbox": "^1.1.2",
     "regenerator-runtime": "^0.9.5",
-    "run-sequence": "^1.2.1",
     "secure-random-string": "^1.0.0",
     "twitter": "^1.4.0",
-    "uglify": "^0.1.5",
     "url-parse": "^1.1.6",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-named": "^1.1.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0",
-    "webpack": "^1.13.1",
-    "webpack-stream": "^3.2.0",
     "xmlhttprequest": "^1.7.0"
   },
   "scripts": {
@@ -86,6 +49,42 @@
   "author": "Ben Christel",
   "license": "MIT",
   "devDependencies": {
-    "gulp-watch": "^4.3.6"
+    "async-await-jasmine": "0.0.2",
+    "babel-plugin-transform-regenerator": "^6.9.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "browserify": "^13.0.1",
+    "del": "^2.2.1",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
+    "glob": "^7.0.5",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.2",
+    "gulp-eslint": "^3.0.1",
+    "gulp-file": "^0.3.0",
+    "gulp-iife": "^0.3.0",
+    "gulp-jasmine": "^2.4.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sane-watch": "^1.1.3",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-watch": "^4.3.6",
+    "uglify": "^0.1.5",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-named": "^1.1.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
+    "webpack": "^1.13.1",
+    "webpack-stream": "^3.2.0"
   }
 }
