--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "jsdom": "^9.4.1",
     "knex": "^0.11.7",
     "markdown-react-js": "^0.3.0",
-    "material-ui": "^0.15.2",
+    "material-ui": "^0.16.4",
     "materialize-css": "^0.97.6",
     "mongodb": "^2.2.1",
     "normalize.css": "^4.2.0",
-    "react": "^15.3.2",
+    "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.3.0",
-    "react-addons-test-utils": "^15.1.0",
+    "react-addons-test-utils": "^15.4.1",
     "react-addons-update": "^15.3.0",
-    "react-dom": "^15.2.0",
+    "react-dom": "^15.4.1",
     "react-fontawesome": "^1.1.0",
     "react-gcaptcha": "^3.2.0",
     "react-markdown": "^2.4.2",
@@ -35,7 +35,7 @@
     "react-recaptcha": "^2.2.0",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.5.2",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "react-toolbox": "^1.1.2",
     "regenerator-runtime": "^0.9.5",
     "secure-random-string": "^1.0.0",
@@ -62,11 +62,11 @@
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
     "glob": "^7.0.5",
-    "grunt": "^1.0.1",
+    "grunt": "^0.4.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-uglify": "*",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
