--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
     "bookshelf": "^0.10.0",
     "browser-cookies": "^1.0.8",
     "browser-request": "^0.3.3",
-    "browserify": "https://registry.npmjs.org/browserify/-/browserify-13.1.0.tgz",
     "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "express": "^4.13.4",
     "geolib": "^2.0.21",
-    "gulp": "git://github.com/gulpjs/gulp.git#c120a948a1273581a9c1503bf6d80fe628710c64",
-    "gulp-babel": "https://registry.npmjs.org/gulp-babel/-/gulp-babel-6.1.2.tgz",
     "jquery": "^3.0.0",
     "jsdom": "^9.4.1",
     "knex": "^0.11.7",
@@ -49,17 +46,7 @@
     "secure-random-string": "^1.0.0",
     "twitter": "^1.4.0",
     "url-parse": "^1.1.6",
-    "xmlhttprequest": "^1.7.0"
-  },
-  "scripts": {
-    "test": "gulp check"
-  },
-  "author": "Ben Christel",
-  "license": "MIT",
-  "optionalDependencies": {
-    "fsevents": "*"
-  },
-  "devDependencies": {
+    "xmlhttprequest": "^1.7.0",
     "async-await-jasmine": "0.0.2",
     "babel-plugin-transform-regenerator": "^6.9.0",
     "babel-polyfill": "^6.9.1",
@@ -78,7 +65,7 @@
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "*",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^4.0.0-alpha.2",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
@@ -97,5 +84,15 @@
     "watchify": "^3.7.0",
     "webpack": "^1.13.1",
     "webpack-stream": "^3.2.0"
+  },
+  "scripts": {
+    "test": "gulp check"
+  },
+  "author": "Ben Christel",
+  "license": "MIT",
+  "optionalDependencies": {
+    "fsevents": "*"
+  },
+  "devDependencies": {
   }
 }
